// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`fix brings a detached label back beside its connector 1`] = `
{
  "bends": 0,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "remainingIssues": 0,
}
`;

exports[`fix brings a detached label back beside its connector 2`] = `
"
      <svg xmlns="http://www.w3.org/2000/svg" viewBox="-100 -100 600 300">
        <g data-node="source">
          <rect x="20" y="20" width="100" height="56"/>
          <text x="70" y="53" text-anchor="middle" font-size="14">Source</text>
        </g>
        <g data-node="target">
          <rect x="260" y="20" width="100" height="56"/>
          <text x="310" y="53" text-anchor="middle" font-size="14">Target</text>
        </g>
        <line id="flow" data-from="source" data-to="target" x1="120" y1="48" x2="260" y2="48"/>
        <text data-label="retry" data-label-for="flow" x="190" y="36" text-anchor="middle" font-size="14">Retry</text>
      </svg>"
`;

exports[`fix expands a clipping viewBox without shrinking its existing extent 1`] = `
{
  "bends": 0,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "remainingIssues": 0,
}
`;

exports[`fix expands a clipping viewBox without shrinking its existing extent 2`] = `
"
      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 140 120">
        <g data-node="checkout">
          <rect x="20" y="20" width="100" height="56"/>
          <text x="70" y="53" text-anchor="middle" font-size="14">Checkout</text>
        </g>
      </svg>"
`;

exports[`fix expands a node box around its label without moving the label 1`] = `
{
  "bends": 0,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "remainingIssues": 0,
}
`;

exports[`fix expands a node box around its label without moving the label 2`] = `
"
      <svg xmlns="http://www.w3.org/2000/svg" viewBox="-100 -100 400 300">
        <g data-node="confirm">
          <rect x="-19" y="20" width="148" height="47"/>
          <text x="55" y="52" text-anchor="middle" font-size="14">Confirm payment</text>
        </g>
      </svg>"
`;

exports[`fix pushes overlapping nodes apart while preserving their order 1`] = `
{
  "bends": 0,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "remainingIssues": 0,
}
`;

exports[`fix pushes overlapping nodes apart while preserving their order 2`] = `
"
      <svg xmlns="http://www.w3.org/2000/svg" viewBox="-100 -100 600 300">
        <g data-node="first">
          <rect x="20" y="20" width="100" height="56"/>
          <text x="70" y="53" text-anchor="middle" font-size="14">First</text>
        </g>
        <g data-node="second" transform="translate(50 0)">
          <rect x="90" y="20" width="100" height="56"/>
          <text x="140" y="53" text-anchor="middle" font-size="14">Second</text>
        </g>
      </svg>"
`;

exports[`fix reroutes a connector around an unrelated node 1`] = `
{
  "bends": 2,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "remainingIssues": 0,
}
`;

exports[`fix reroutes a connector around an unrelated node 2`] = `
"
  <svg xmlns="http://www.w3.org/2000/svg" viewBox="-100 -100 600 300">
    <g data-node="source">
      <rect x="20" y="20" width="100" height="56"/>
      <text x="70" y="53" text-anchor="middle" font-size="14">Source</text>
    </g>
    <g data-node="obstacle">
      <rect x="150" y="20" width="80" height="56"/>
      <text x="190" y="53" text-anchor="middle" font-size="14">Block</text>
    </g>
    <g data-node="target">
      <rect x="260" y="20" width="100" height="56"/>
      <text x="310" y="53" text-anchor="middle" font-size="14">Target</text>
    </g>
    
    <path id="flow" data-from="source" data-to="target" d="M 70 20 L 70 12 L 310 12 L 310 20"/>
  </svg>"
`;

exports[`fix leaves and enters node sides perpendicularly when detouring 1`] = `
{
  "bends": 2,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "remainingIssues": 0,
}
`;

exports[`fix leaves and enters node sides perpendicularly when detouring 2`] = `
"
  <svg xmlns="http://www.w3.org/2000/svg" viewBox="-100 -100 600 300">
    <g data-node="source">
      <rect x="20" y="20" width="100" height="56"/>
      <text x="70" y="53" text-anchor="middle" font-size="14">Source</text>
    </g>
    <g data-node="obstacle">
      <rect x="150" y="20" width="80" height="56"/>
      <text x="190" y="53" text-anchor="middle" font-size="14">Block</text>
    </g>
    <g data-node="target">
      <rect x="260" y="20" width="100" height="56"/>
      <text x="310" y="53" text-anchor="middle" font-size="14">Target</text>
    </g>
    
    <path id="flow" data-from="source" data-to="target" d="M 70 20 L 70 12 L 310 12 L 310 20"/>
  </svg>"
`;

exports[`fix reroutes between offset ports orthogonally instead of diagonally 1`] = `
{
  "bends": 1,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "remainingIssues": 0,
}
`;

exports[`fix reroutes between offset ports orthogonally instead of diagonally 2`] = `
"
      <svg xmlns="http://www.w3.org/2000/svg" viewBox="-100 -100 600 300">
        <g data-node="source">
          <rect x="20" y="20" width="100" height="56"/>
          <text x="70" y="53" text-anchor="middle" font-size="14">Source</text>
        </g>
        <g data-node="target">
          <rect x="260" y="60" width="100" height="56"/>
          <text x="310" y="93" text-anchor="middle" font-size="14">Target</text>
        </g>
        <path id="flow" data-from="source" data-to="target" d="M 120 48 L 310 48 L 310 60"/>
      </svg>"
`;

exports[`fix aligns ports on facing sides so the connector stays straight 1`] = `
{
  "bends": 1,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "remainingIssues": 0,
}
`;

exports[`fix aligns ports on facing sides so the connector stays straight 2`] = `
"
      <svg xmlns="http://www.w3.org/2000/svg" viewBox="-100 -100 600 400">
        <g data-node="source">
          <rect x="20" y="20" width="100" height="90"/>
          <text x="70" y="70" text-anchor="middle" font-size="14">Source</text>
        </g>
        <g data-node="upper">
          <rect x="260" y="20" width="100" height="56"/>
          <text x="310" y="53" text-anchor="middle" font-size="14">Upper</text>
        </g>
        <g data-node="lower">
          <rect x="260" y="140" width="100" height="56"/>
          <text x="310" y="173" text-anchor="middle" font-size="14">Lower</text>
        </g>
        <path id="to-upper" data-from="source" data-to="upper" d="M 120 65 L 260 65"/>
        <path id="to-lower" data-from="source" data-to="lower" d="M 70 110 L 70 168 L 260 168"/>
      </svg>"
`;

exports[`fix keeps aligned ports at least 10px from other ports on the side 1`] = `
{
  "bends": 2,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "remainingIssues": 0,
}
`;

exports[`fix keeps aligned ports at least 10px from other ports on the side 2`] = `
"
      <svg xmlns="http://www.w3.org/2000/svg" viewBox="-100 -100 600 400">
        <g data-node="source">
          <rect x="20" y="20" width="100" height="56"/>
          <text x="70" y="53" text-anchor="middle" font-size="14">Source</text>
        </g>
        <g data-node="other">
          <rect x="20" y="140" width="100" height="56"/>
          <text x="70" y="173" text-anchor="middle" font-size="14">Other</text>
        </g>
        <g data-node="target">
          <rect x="260" y="20" width="100" height="56"/>
          <text x="310" y="53" text-anchor="middle" font-size="14">Target</text>
        </g>
        <g data-node="floor">
          <rect x="260" y="91" width="100" height="56"/>
          <text x="310" y="124" text-anchor="middle" font-size="14">Floor</text>
        </g>
        <path id="facing" data-from="source" data-to="target" d="M 120 39 L 260 39"/>
        <path id="climbing" data-from="other" data-to="target" d="M 120 168 L 190 168 L 190 57 L 260 57"/>
      </svg>"
`;

exports[`fix switches to another side when it saves bends 1`] = `
{
  "bends": 1,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "remainingIssues": 0,
}
`;

exports[`fix switches to another side when it saves bends 2`] = `
"
      <svg xmlns="http://www.w3.org/2000/svg" viewBox="-100 -100 600 400">
        <g data-node="source">
          <rect x="20" y="20" width="100" height="56"/>
          <text x="70" y="53" text-anchor="middle" font-size="14">Source</text>
        </g>
        <g data-node="target">
          <rect x="260" y="160" width="100" height="56"/>
          <text x="310" y="193" text-anchor="middle" font-size="14">Target</text>
        </g>
        <path id="flow" data-from="source" data-to="target" d="M 120 48 L 310 48 L 310 160"/>
      </svg>"
`;

exports[`fix keeps connectors off crowded sides so every label finds a slot 1`] = `
{
  "bends": 11,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "remainingIssues": 0,
}
`;

exports[`fix keeps connectors off crowded sides so every label finds a slot 2`] = `
"
      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2306 1060">
        <g data-node="aml">
          <rect x="1258" y="40" width="196" height="60" rx="14"/>
          <text x="1356" y="66" font-size="13" text-anchor="middle">9 AML Screening</text>
          <text x="1356" y="85" font-size="11" text-anchor="middle">fuzzy name match</text>
        </g>
        <g data-node="tfront">
          <rect x="40" y="270" width="196" height="60" rx="14"/>
          <text x="138" y="296" font-size="13" text-anchor="middle">3 Teller Front</text>
          <text x="138" y="315" font-size="11" text-anchor="middle">VB6 · 2006</text>
        </g>
        <g data-node="domadp">
          <rect x="2070" y="270" width="196" height="60" rx="14"/>
          <text x="2168" y="296" font-size="13" text-anchor="middle">17 Zengin Adapter</text>
          <text x="2168" y="315" font-size="11" text-anchor="middle">C · 2006</text>
        </g>
        <g data-node="partneradp">
          <rect x="1664" y="730" width="196" height="60" rx="14"/>
          <text x="1762" y="756" font-size="13" text-anchor="middle">24 Partner Adapter</text>
          <text x="1762" y="775" font-size="11" text-anchor="middle">REST + SFTP</text>
        </g>
        <g data-node="regrep">
          <rect x="2070" y="730" width="196" height="60" rx="14"/>
          <text x="2168" y="756" font-size="13" text-anchor="middle">25 Reg Reporting</text>
          <text x="2168" y="775" font-size="11" text-anchor="middle">STR / CTR export</text>
        </g>
        <g data-node="ledger">
          <rect x="852" y="960" width="196" height="60"/>
          <text x="964" y="986" font-size="13" text-anchor="middle">D4 Transfer Ledger</text>
          <text x="964" y="1005" font-size="11" text-anchor="middle">Oracle · 2006</text>
        </g>
        <g data-node="mq">
          <rect x="1664" y="960" width="196" height="60"/>
          <text x="1776" y="986" font-size="13" text-anchor="middle">D6 Message Queue</text>
          <text x="1776" y="1005" font-size="11" text-anchor="middle">IBM MQ + Kafka</text>
        </g>
        <g data-node="audit">
          <rect x="2070" y="960" width="196" height="60"/>
          <text x="2182" y="986" font-size="13" text-anchor="middle">D7 Audit Log</text>
          <text x="2182" y="1005" font-size="11" text-anchor="middle">WORM storage</text>
        </g>
        <path id="f57" data-from="partneradp" data-to="mq" d="M 1762 790 L 1762 960"/>
        <path id="f58" data-from="domadp" data-to="mq" d="M 2070 300 L 1988 300 L 1988 990 L 1860 990"/>
        <path id="f70" data-from="ledger" data-to="regrep" d="M 1048 990 L 1559 990 L 1559 875 L 2168 875 L 2168 790"/>
        <path id="f71" data-from="aml" data-to="regrep" d="M 1454 60 L 1998 60 L 1998 760 L 2070 760"/>
        <path id="f75" data-from="aml" data-to="audit" d="M 1454 80 L 2008 80 L 2008 980 L 2070 980"/>
        <path id="f76" data-from="tfront" data-to="audit" d="M 236 300 L 1978 300 L 1978 1000 L 2070 1000"/>
        <text data-label="l57" data-label-for="f57" x="1771" y="864" font-size="12" text-anchor="start">status event</text>
        <text data-label="l58" data-label-for="f58" x="1924" y="979" font-size="12" text-anchor="middle">status event</text>
        <text data-label="l70" data-label-for="f70" x="1864" y="896" font-size="12" text-anchor="middle">transactions</text>
        <text data-label="l71" data-label-for="f71" x="1989" y="276" font-size="12" text-anchor="end">STR candidates</text>
        <text data-label="l75" data-label-for="f75" x="2017" y="536" font-size="12" text-anchor="start">screening log</text>
        <text data-label="l76" data-label-for="f76" x="1107" y="289" font-size="12" text-anchor="middle">teller log</text>
      </svg>"
`;

exports[`fix fixes again while another pass leaves fewer issues 1`] = `
{
  "bends": 10,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "remainingIssues": 0,
}
`;

exports[`fix fixes again while another pass leaves fewer issues 2`] = `
"
      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1494 1060">
        <g data-node="aml">
          <rect x="40" y="40" width="196" height="60" rx="14"/>
          <text x="138" y="66" font-size="13" text-anchor="middle">9 AML Screening</text>
          <text x="138" y="85" font-size="11" text-anchor="middle">fuzzy name match</text>
        </g>
        <g data-node="fx">
          <rect x="446" y="40" width="196" height="60" rx="14"/>
          <text x="544" y="66" font-size="13" text-anchor="middle">10 FX Quote</text>
          <text x="544" y="85" font-size="11" text-anchor="middle">spread by segment</text>
        </g>
        <g data-node="fee">
          <rect x="40" y="270" width="196" height="60" rx="14"/>
          <text x="138" y="296" font-size="13" text-anchor="middle">11 Fee Calc</text>
          <text x="138" y="315" font-size="11" text-anchor="middle">legacy + new, diffed</text>
        </g>
        <g data-node="route">
          <rect x="446" y="270" width="196" height="60" rx="14"/>
          <text x="544" y="296" font-size="13" text-anchor="middle">16 Routing Engine</text>
          <text x="544" y="315" font-size="11" text-anchor="middle">rules in DB + code</text>
        </g>
        <g data-node="domadp">
          <rect x="852" y="270" width="196" height="60" rx="14"/>
          <text x="950" y="296" font-size="13" text-anchor="middle">17 Zengin Adapter</text>
          <text x="950" y="315" font-size="11" text-anchor="middle">C · 2006</text>
        </g>
        <g data-node="mxconv">
          <rect x="446" y="500" width="196" height="60" rx="14"/>
          <text x="544" y="526" font-size="13" text-anchor="middle">20 MT103 to MX</text>
          <text x="544" y="545" font-size="11" text-anchor="middle">ISO 20022 · 2023</text>
        </g>
        <g data-node="partneradp">
          <rect x="446" y="730" width="196" height="60" rx="14"/>
          <text x="544" y="756" font-size="13" text-anchor="middle">24 Partner Adapter</text>
          <text x="544" y="775" font-size="11" text-anchor="middle">REST + SFTP</text>
        </g>
        <g data-node="partner">
          <rect x="1258" y="730" width="196" height="60"/>
          <text x="1356" y="756" font-size="13" text-anchor="middle">Partner Remitter</text>
          <text x="1356" y="775" font-size="11" text-anchor="middle">12 corridors</text>
        </g>
        <g data-node="ratefee">
          <rect x="40" y="960" width="200.5" height="60"/>
          <text x="152" y="986" font-size="13" text-anchor="middle">D5 Rate / Fee Tables</text>
          <text x="152" y="1005" font-size="11" text-anchor="middle">Redis + Oracle</text>
        </g>
        <path id="f35" data-from="aml" data-to="route" d="M 236 70 L 437 70 L 437 290 L 446 290"/>
        <path id="f37" data-from="fx" data-to="ratefee" d="M 446 70 L 438 70 L 438 80 L 331 80 L 331 990 L 240.5 990"/>
        <path id="f42" data-from="fx" data-to="fee" d="M 446 60 L 246 60 L 246 290 L 236 290"/>
        <path id="f44" data-from="fee" data-to="route" d="M 236 300 L 446 300"/>
        <path id="f46" data-from="route" data-to="domadp" d="M 642 300 L 852 300"/>
        <path id="f47" data-from="route" data-to="mxconv" d="M 544 330 L 544 500"/>
        <path id="f48" data-from="route" data-to="partneradp" d="M 446 315 L 438 315 L 438 760 L 446 760"/>
        <path id="f56" data-from="partner" data-to="partneradp" d="M 1258 760 L 642 760"/>
        <text data-label="l35" data-label-for="f35" x="446" y="186" font-size="12" text-anchor="start">cleared order</text>
        <text data-label="l37" data-label-for="f37" x="340" y="541" font-size="12" text-anchor="start">cached rate</text>
        <text data-label="l42" data-label-for="f42" x="255" y="181" font-size="12" text-anchor="start">quote</text>
        <text data-label="l44" data-label-for="f44" x="383" y="289" font-size="12" text-anchor="middle">priced order</text>
        <text data-label="l46" data-label-for="f46" x="747" y="289" font-size="12" text-anchor="middle">domestic</text>
        <text data-label="l47" data-label-for="f47" x="553" y="421" font-size="12" text-anchor="start">MT103</text>
        <text data-label="l48" data-label-for="f48" x="429" y="521" font-size="12" text-anchor="end">corridor</text>
        <text data-label="l56" data-label-for="f56" x="950" y="749" font-size="12" text-anchor="middle">payout confirm</text>
      </svg>"
`;

exports[`fix moves a connector's label beside its rerouted path 1`] = `
{
  "bends": 2,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "remainingIssues": 0,
}
`;

exports[`fix moves a connector's label beside its rerouted path 2`] = `
"
  <svg xmlns="http://www.w3.org/2000/svg" viewBox="-100 -100 600 300">
    <g data-node="source">
      <rect x="20" y="20" width="100" height="56"/>
      <text x="70" y="53" text-anchor="middle" font-size="14">Source</text>
    </g>
    <g data-node="obstacle">
      <rect x="150" y="20" width="80" height="56"/>
      <text x="190" y="53" text-anchor="middle" font-size="14">Block</text>
    </g>
    <g data-node="target">
      <rect x="260" y="20" width="100" height="56"/>
      <text x="310" y="53" text-anchor="middle" font-size="14">Target</text>
    </g>
    <text data-label="retry" data-label-for="flow" x="190" y="0" text-anchor="middle" font-size="14">Retry</text>
    <path id="flow" data-from="source" data-to="target" d="M 70 20 L 70 12 L 310 12 L 310 20"/>
  </svg>"
`;

exports[`fix moves only a detached label, leaving its sound connector as drawn 1`] = `
{
  "bends": 2,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "remainingIssues": 0,
}
`;

exports[`fix moves only a detached label, leaving its sound connector as drawn 2`] = `
"
      <svg xmlns="http://www.w3.org/2000/svg" viewBox="-100 -100 600 400">
        <g data-node="source">
          <rect x="20" y="20" width="100" height="56"/>
          <text x="70" y="53" text-anchor="middle" font-size="14">Source</text>
        </g>
        <g data-node="target">
          <rect x="260" y="160" width="100" height="56"/>
          <text x="310" y="193" text-anchor="middle" font-size="14">Target</text>
        </g>
        <path id="flow" data-from="source" data-to="target" d="M 120 48 L 190 48 L 190 188 L 260 188"/>
        <text data-label="retry" data-label-for="flow" x="199" y="125" text-anchor="start" font-size="14">Retry</text>
      </svg>"
`;

exports[`fix keeps a moved label clear of other labels 1`] = `
{
  "bends": 2,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "remainingIssues": 0,
}
`;

exports[`fix keeps a moved label clear of other labels 2`] = `
"
  <svg xmlns="http://www.w3.org/2000/svg" viewBox="-100 -100 600 300">
    <g data-node="source">
      <rect x="20" y="20" width="100" height="56"/>
      <text x="70" y="53" text-anchor="middle" font-size="14">Source</text>
    </g>
    <g data-node="obstacle">
      <rect x="150" y="20" width="80" height="56"/>
      <text x="190" y="53" text-anchor="middle" font-size="14">Block</text>
    </g>
    <g data-node="target">
      <rect x="260" y="20" width="100" height="56"/>
      <text x="310" y="53" text-anchor="middle" font-size="14">Target</text>
    </g>
    <text data-label="note" x="190" y="0" text-anchor="middle" font-size="14">Note</text>
        <text data-label="retry" data-label-for="flow" x="142" y="0" text-anchor="middle" font-size="14">Retry</text>
    <path id="flow" data-from="source" data-to="target" d="M 70 20 L 70 12 L 310 12 L 310 20"/>
  </svg>"
`;

exports[`fix does not reroute a connector onto another connector 1`] = `
{
  "bends": 2,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "remainingIssues": 0,
}
`;

exports[`fix does not reroute a connector onto another connector 2`] = `
"
      <svg xmlns="http://www.w3.org/2000/svg" viewBox="-100 -100 600 300">
        <g data-node="west">
          <rect x="-60" y="-10" width="60" height="40"/>
          <text x="-30" y="15" text-anchor="middle" font-size="12">W</text>
        </g>
        <g data-node="source">
          <rect x="20" y="20" width="100" height="56"/>
          <text x="70" y="53" text-anchor="middle" font-size="14">Source</text>
        </g>
        <g data-node="obstacle">
          <rect x="150" y="20" width="80" height="56"/>
          <text x="190" y="53" text-anchor="middle" font-size="14">Block</text>
        </g>
        <g data-node="target">
          <rect x="260" y="20" width="100" height="56"/>
          <text x="310" y="53" text-anchor="middle" font-size="14">Target</text>
        </g>
        <g data-node="east">
          <rect x="400" y="-10" width="60" height="40"/>
          <text x="430" y="15" text-anchor="middle" font-size="12">E</text>
        </g>
        <line id="bus" data-from="west" data-to="east" x1="0" y1="12" x2="400" y2="12"/>
        <path id="flow" data-from="source" data-to="target" d="M 70 76 L 70 84 L 310 84 L 310 76"/>
      </svg>"
`;

exports[`fix does not reroute onto a short segment between grid lines 1`] = `
{
  "bends": 4,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "remainingIssues": 0,
}
`;

exports[`fix does not reroute onto a short segment between grid lines 2`] = `
"
      <svg xmlns="http://www.w3.org/2000/svg" viewBox="-100 -100 600 300">
        <g data-node="west">
          <rect x="-60" y="-60" width="60" height="40"/>
          <text x="-30" y="-35" text-anchor="middle" font-size="12">W</text>
        </g>
        <g data-node="source">
          <rect x="20" y="20" width="100" height="56"/>
          <text x="70" y="53" text-anchor="middle" font-size="14">Source</text>
        </g>
        <g data-node="obstacle">
          <rect x="150" y="20" width="80" height="56"/>
          <text x="190" y="53" text-anchor="middle" font-size="14">Block</text>
        </g>
        <g data-node="target">
          <rect x="260" y="20" width="100" height="56"/>
          <text x="310" y="53" text-anchor="middle" font-size="14">Target</text>
        </g>
        <path id="tick" data-from="west" data-to="target" d="M 0 -40 L 195 -40 L 195 12 L 200 12"/>
        <path id="flow" data-from="source" data-to="target" d="M 70 76 L 70 84 L 310 84 L 310 76"/>
      </svg>"
`;

exports[`fix detours in a parallel lane when both detour lanes are taken 1`] = `
{
  "bends": 2,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "remainingIssues": 0,
}
`;

exports[`fix detours in a parallel lane when both detour lanes are taken 2`] = `
"
      <svg xmlns="http://www.w3.org/2000/svg" viewBox="-100 -100 600 300">
        
      <g data-node="west">
        <rect x="-60" y="20" width="60" height="56"/>
        <text x="-30" y="53" text-anchor="middle" font-size="12">W</text>
      </g>
        
      <g data-node="source">
        <rect x="20" y="20" width="100" height="56"/>
        <text x="70" y="53" text-anchor="middle" font-size="12">S</text>
      </g>
        
      <g data-node="obstacle">
        <rect x="150" y="20" width="80" height="56"/>
        <text x="190" y="53" text-anchor="middle" font-size="12">O</text>
      </g>
        
      <g data-node="target">
        <rect x="260" y="20" width="100" height="56"/>
        <text x="310" y="53" text-anchor="middle" font-size="12">T</text>
      </g>
        
      <g data-node="east">
        <rect x="400" y="20" width="60" height="56"/>
        <text x="430" y="53" text-anchor="middle" font-size="12">E</text>
      </g>
        <line id="upper" data-from="west" data-to="east" x1="0" y1="12" x2="400" y2="12"/>
        <line id="lower" data-from="west" data-to="east" x1="0" y1="84" x2="400" y2="84"/>
        <path id="flow" data-from="source" data-to="target" d="M 70 20 L 70 2 L 310 2 L 310 20"/>
      </svg>"
`;

exports[`fix separates a request and reply drawn on the same line 1`] = `
{
  "bends": 0,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "remainingIssues": 0,
}
`;

exports[`fix separates a request and reply drawn on the same line 2`] = `
"
      <svg xmlns="http://www.w3.org/2000/svg" viewBox="-100 -100 600 300">
        <g data-node="client">
          <rect x="20" y="20" width="100" height="60"/>
          <text x="70" y="55" text-anchor="middle" font-size="14">Client</text>
        </g>
        <g data-node="server">
          <rect x="260" y="20" width="100" height="60"/>
          <text x="310" y="55" text-anchor="middle" font-size="14">Server</text>
        </g>
        <path id="request" data-from="client" data-to="server" d="M 120 40 L 260 40"/>
        <path id="reply" data-from="server" data-to="client" d="M 260 60 L 120 60"/>
      </svg>"
`;

exports[`fix reroutes with several bends when one detour cannot clear the obstacles 1`] = `
{
  "bends": 3,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "remainingIssues": 0,
}
`;

exports[`fix reroutes with several bends when one detour cannot clear the obstacles 2`] = `
"
      <svg xmlns="http://www.w3.org/2000/svg" viewBox="-100 -100 600 500">
        
      <g data-node="n00">
        <rect x="0" y="0" width="100" height="50"/>
        <text x="50" y="30" text-anchor="middle" font-size="14">n00</text>
      </g>
      <g data-node="n01">
        <rect x="150" y="0" width="100" height="50"/>
        <text x="200" y="30" text-anchor="middle" font-size="14">n01</text>
      </g>
      <g data-node="n02">
        <rect x="300" y="0" width="100" height="50"/>
        <text x="350" y="30" text-anchor="middle" font-size="14">n02</text>
      </g>
      <g data-node="n10">
        <rect x="0" y="100" width="100" height="50"/>
        <text x="50" y="130" text-anchor="middle" font-size="14">n10</text>
      </g>
      <g data-node="n11">
        <rect x="150" y="100" width="100" height="50"/>
        <text x="200" y="130" text-anchor="middle" font-size="14">n11</text>
      </g>
      <g data-node="n12">
        <rect x="300" y="100" width="100" height="50"/>
        <text x="350" y="130" text-anchor="middle" font-size="14">n12</text>
      </g>
      <g data-node="n20">
        <rect x="0" y="200" width="100" height="50"/>
        <text x="50" y="230" text-anchor="middle" font-size="14">n20</text>
      </g>
      <g data-node="n21">
        <rect x="150" y="200" width="100" height="50"/>
        <text x="200" y="230" text-anchor="middle" font-size="14">n21</text>
      </g>
      <g data-node="n22">
        <rect x="300" y="200" width="100" height="50"/>
        <text x="350" y="230" text-anchor="middle" font-size="14">n22</text>
      </g>
        <path id="flow" data-from="n20" data-to="n02" d="M 50 200 L 50 175 L 275 175 L 275 25 L 300 25"/>
      </svg>"
`;

exports[`fix reroutes a connector when its detached label has no room beside it 1`] = `
{
  "bends": 0,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "remainingIssues": 0,
}
`;

exports[`fix reroutes a connector when its detached label has no room beside it 2`] = `
"
      <svg xmlns="http://www.w3.org/2000/svg" viewBox="-100 -100 600 300">
        <g data-node="source">
          <rect x="20" y="20" width="100" height="56"/>
          <text x="70" y="53" text-anchor="middle" font-size="14">Source</text>
        </g>
        <g data-node="target">
          <rect x="260" y="20" width="100" height="56"/>
          <text x="310" y="53" text-anchor="middle" font-size="14">Target</text>
        </g>
        <path id="flow" data-from="source" data-to="target" d="M 120 48 L 260 48"/>
        <text data-label="retry" data-label-for="flow" x="190" y="36" text-anchor="middle" font-size="14">Retry</text>
      </svg>"
`;
